--- a/src/java/hu/sch/kurzuscsere/HomePage.html
+++ b/src/java/hu/sch/kurzuscsere/HomePage.html
@@ -7,8 +7,10 @@
     </wicket:head> 
 </head> 
 <body> 
-    <wicket:extend> 
-       <h1 wicket:id="message">This gets replaced</h1>
-    </wicket:extend> 
+<wicket:extend> 
+    <h1 wicket:id="message">This gets replaced</h1>
+</wicket:extend> 
+
+    <div wicket:id="lessonpanel"></div>
 </body> 
 </html>
