--- a/src/java/hu/sch/kurzuscsere/LessonListPanel.html
+++ b/src/java/hu/sch/kurzuscsere/LessonListPanel.html
@@ -12,24 +12,11 @@
             <span wicket:id="title">title here</span>
             
             -->
-
-
-            <form wicket:id="listform">
-                <h1 wicket:id="cserek">replace</h1>
-                <br/>
-
-                <div wicket:id="listone"></div>
-                <div wicket:id="listtwo"></div>
-                <div wicket:id="listthree"></div>
-                <div wicket:id="listfour"></div>
-                <div wicket:id="listfive"></div>
-                <div wicket:id="listsix"></div>
-                <div wicket:id="listseven"></div>
-                <div wicket:id="listeight"></div>
-                <div wicket:id="listnine"></div>
-                <div wicket:id="listten"></div>
-                
-                <br/>
+            <form wicket:id="list">
+                <h2 wicket:id="legfrisebb">Text goes here</h2>
+                <span wicket:id="listview">
+                    this label is: <span wicket:id="label">label</span><br/>
+                </span>
             </form>
 
         </wicket:panel>
