egy nagy commit

--- a/src/java/hu/sch/kurzuscsere/LessonListPanel.html
+++ b/src/java/hu/sch/kurzuscsere/LessonListPanel.html
@@ -7,16 +7,17 @@
     </head>
     <body>
         <wicket:panel>
-            <!-- TODO - add components here, ala
+            <!-- TODO - add components here, 
             
             <span wicket:id="title">title here</span>
             
             -->
             <form wicket:id="list">
-                <h2 wicket:id="legfrisebb">Text goes here</h2>
+                <h2 wicket:id="legfrissebb">Text goes here</h2>
                 <span wicket:id="listview">
                     this label is: <span wicket:id="label">label</span><br/>
                 </span>
+                <br/>
             </form>
 
         </wicket:panel>
