Felesleges oldalak törlése, oldalak refaktorja

--- a/src/java/hu/sch/kurzuscsere/BasePage.html
+++ b/src/java/hu/sch/kurzuscsere/BasePage.html
@@ -5,20 +5,18 @@
         <meta name="description" content="Put your description here!" /> 
     <wicket:head> 
         <wicket:link> 
-            <link rel="stylesheet" type="text/css" href="style.css"/> 
+            <link rel="stylesheet" type="text/css" href="css/style.css"/>
         </wicket:link> 
     </wicket:head> 
 </head> 
 <body> 
-    <header wicket:id="loginpanel" />
+    <header wicket:id="headerPanel" />
     <div wicket:id="feedbackPanel"></div>
 
     <section class="content_container"> 
         <wicket:child/> 
     </section> 
 
-
-
-    <footer wicket:id="footerpanel" /> 
+    <footer wicket:id="footerPanel" />
 </body> 
 </html>
