--- a/src/java/hu/sch/kurzuscsere/HeaderPanel.html
+++ b/src/java/hu/sch/kurzuscsere/HeaderPanel.html
@@ -5,6 +5,7 @@
     <body>
         <wicket:panel>
             
+            <div wicket:id="pageTitle"></div>
             <div wicket:id="loginpanel">LoginPanel</div>
             
         </wicket:panel>
