--- a/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
@@ -6,6 +6,10 @@
         <wicket:panel>
 
             <div wicket:id="pageTitle"></div>
+            <ul>
+                <li><a wicket:id="homeMenuLink" href="#">Kezdőlap</a></li>
+                <li><a wicket:id="myreqMenuLink" href="#">Kéréseim</a></li>
+            </ul>
 
         </wicket:panel>
     </body>
