Tárgyak felvitele string split problem ... :S

--- a/src/java/hu/sch/kurzuscsere/panel/UploadPanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/UploadPanel.html
@@ -12,6 +12,14 @@
                 <input wicket:id="fileUpload" type="file"/>
                 <input type="submit" value="Feltölt!"/>
             </form>
+            
+            <form wicket:id="parseform">
+            <input type="submit" value="Listaz" wicket:id="btnlist"/>
+            
+            <div wicket:id="listview">
+                <span wicket:id="labels"></span>
+            </div>
+            </form>
         </wicket:panel>
     </body>
 </html>
