--- a/src/java/hu/sch/kurzuscsere/panel/UploadPanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/UploadPanel.html
@@ -14,6 +14,7 @@
             </form>
             
             <form wicket:id="parseform">
+                A feltöltés után pedig kattints a listáz gombra!
             <input type="submit" value="Listaz" wicket:id="btnlist"/>
             
             <div wicket:id="listview">
