Felhasználó-váltó és adatmódosító, kicsinyíthető fejlesztői panel

--- a/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
@@ -6,6 +6,8 @@
         <wicket:panel>
 
             <div wicket:id="pageTitle"></div>
+            <div wicket:id="loggedInUser" style="font-weight: bold;"></div>
+            <div wicket:id="devPanel"></div>
             <ul>
                 <li><a wicket:id="homeMenuLink" href="#">Kezdőlap</a></li>
                 <li><a wicket:id="myreqMenuLink" href="#">Kéréseim</a></li>
