a panelek kivétele a basepage-ből; létrehoztam egy új kezdőoldalt, ahol fejleszthetem a leendő kezdőlapot. Te közben kísérletezhetsz a jelenlegi főoldalon

--- a/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/HeaderPanel.html
@@ -11,6 +11,7 @@
             <ul>
                 <li><a wicket:id="homeMenuLink" href="#">Kezdőlap</a></li>
                 <li><a wicket:id="myreqMenuLink" href="#">Kéréseim</a></li>
+                <li><a wicket:id="newHomeMenuLink" href="#">Új kezdőlap</a></li>
             </ul>
 
         </wicket:panel>
