courseChange request összeállítása submitkor

--- a/src/java/hu/sch/kurzuscsere/panel/CourseChangePanel.html
+++ b/src/java/hu/sch/kurzuscsere/panel/CourseChangePanel.html
@@ -23,7 +23,7 @@
                     </div>
                     
                 </div>
-<!--                <span wicket:id="test">label is here</span>-->
+                <span wicket:id="test">label is here</span>
 <!--                <span wicket:id="testone">label is here</span>-->
             </form>
             
